<resources>
    <string name="instagram">Instagram</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="thanks">Thanks</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="report_inappropriate">Report</string>
    <string name="reported">Reported</string>
    <string name="try_again">Try again</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_im_sure">"Yes, I'm sure"</string>
    <string name="loading">Loading...</string>
    <string name="dismiss">Dismiss</string>
    <string name="failed">Failed</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="unknown_error_occured">An unknown error occurred</string>
    <string name="network_error">An unknown network error has occurred.</string>
    <string name="security_exception">Please turn on Internet Permission.</string>
    <string name="request_error">"Sorry, we couldn't complete your request. Please try again in a moment."</string>
    <string name="could_not_refresh_feed">"Couldn't refresh feed"</string>
    <string name="tap_to_refresh">Tap to Refresh</string>
    <string name="learn_more">Learn More</string>
    <string name="about_ig_ads">About Instagram Ads</string>
    <string name="changes_saved">Changes saved</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="fail_confirm_email">"We can't confirm your email right now. Try again later."</string>
    <string name="fail_send_confirm_email">"We can't send you confirmation email right now. Try again later."</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="next_caps">NEXT</string>
    <string name="options">Options</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="posts">posts</string>
    <string name="allow">Allow</string>
    <string name="view_profile">View Profile</string>
    <string name="photo">Photo</string>
    <string name="see_all">See All</string>
    <string name="user_and_x_more">%1$s and %2$d more</string>
    <string name="hide">Hide</string>
    <string name="empty_photos">No photos to show</string>
    <string name="private_account">Private Account</string>
    <string name="posts_plural">%1$s posts</string>
    <string name="posts_singular">%1$s post</string>
    <string name="home_description">Home</string>
    <string name="notifications_description">Notifications</string>
    <string name="camera_description">Camera</string>
    <string name="explore_description">Search and Explore</string>
    <string name="profile_description">Profile</string>
    <string name="profile_photo_description">Profile Photo</string>
    <string name="profile_grid_description">Grid View</string>
    <string name="profile_list_description">List View</string>
    <string name="profile_map_description">Photo Map</string>
    <string name="profile_tagged_description">Photos of You</string>
    <string name="discover_new_people_description">Discover new people to follow</string>
    <string name="image_description">Photo from %1$s</string>
    <string name="video_description">Video from %1$s</string>
    <string name="press_play_teaser_label">Videos</string>
    <string name="promote">Promote</string>
    <string name="promote_post">Promote Post</string>
    <string name="cannot_connect_camera">Cannot connect to camera.</string>
    <string name="fatal_camera_error">The camera is not working properly.</string>
    <string name="dialog_ok">OK</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_flash_mode_off">off</string>
    <string name="pref_camera_flash_mode_on">on</string>
    <string name="pref_camera_flash_mode_auto">auto</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_focusmode_default">continuous-picture</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="preparing_sd">Preparing…</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="grid_off">Grid off</string>
    <string name="grid_on">Grid on</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_on">Flash on</string>
    <string name="shutter">Shutter</string>
    <string name="photo_library">Photo Library</string>
    <string name="switch_video_mode">Switch to video mode</string>
    <string name="switch_front_camera">Switch to front camera</string>
    <string name="switch_back_camera">Switch to back camera</string>
    <string name="nux_dayone_new_account">New Account</string>
    <string name="nux_dayone_log_in">Log In</string>
    <string name="nux_dayone_sign_up">Sign Up</string>
    <string name="nux_dayone_duplicate_email">Your Facebook email address, %1$s, already has an account with Instagram</string>
    <string name="tabbed_landing_subtitle_sign_up">Sign up to see photos and videos from your friends.</string>
    <string name="tabbed_landing_subtitle_log_in">Log in to see photos and videos from your friends.</string>
    <string name="tabbed_landing_log_in_with_facebook">Log in with Facebook</string>
    <string name="tabbed_landing_email_hint">Email</string>
    <string name="tabbed_landing_new_reg_email_hint">Enter your email</string>
    <string name="tabbed_landing_name_hint">Add your name (optional)</string>
    <string name="tabbed_landing_full_name_hint">Add your full name (optional)</string>
    <string name="tabbed_landing_username_hint">Choose a username</string>
    <string name="tabbed_landing_password_hint">Create a password</string>
    <string name="tabbed_landing_bottom_policy">By signing up, you agree to our %1$s &amp; %2$s.</string>
    <string name="tabbed_landing_terms">Terms</string>
    <string name="tabbed_landing_confirmation_code_header">We just sent an email to %1$s with a confirmation code, please enter it below.</string>
    <string name="tabbed_landing_confirmation_code_explain">"We need you to confirm your email address as it's been used to create an account previously"</string>
    <string name="tabbed_landing_confirmation_code_resend">Resend Code</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirmation_code_invalid">Confirmation Code Invalid</string>
    <string name="full_name_optional">Full name (optional)</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="continue_as_facebook">Continue as %1$s</string>
    <string name="sign_up_with_email_or_phone">Sign up with email or phone number</string>
    <string name="already_have_an_account_log_in">Already have an account? &lt;b>Log in.&lt;/b></string>
    <string name="log_in">Log in</string>
    <string name="logging_in">Logging In...</string>
    <string name="user_forgot_password_message">Forgot your login details? &lt;b>Get help signing in.&lt;/b></string>
    <string name="user_signup_message">"Don't have an account? &lt;b>Sign up.&lt;/b>"</string>
    <string name="add_email_address">Add Email Address</string>
    <string name="use_phone_number_instead">"Don't want to use your email? &lt;br/>&lt;b>Sign up with your phone number instead.&lt;/b>"</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="use_email_instead">"Don't want to use your phone number? &lt;br/>&lt;b>Sign up with your email instead.&lt;/b>"</string>
    <string name="login_phone_hint">Phone</string>
    <string name="enter_confirmation_code">Enter Confirmation Code</string>
    <string name="resend_code">Enter the code we sent to &lt;br/>%1$s. &lt;b>Resend code.&lt;/b></string>
    <string name="sms_confirmation_code_resent">A SMS confirmation has been sent.</string>
    <string name="create_username_title">Create Username</string>
    <string name="create_username_with_suggestions_subtitle">Add a username or use our suggestion. You can change this anytime.</string>
    <string name="create_username_without_suggestions_subtitle">Add a username. You can change this anytime.</string>
    <string name="find_friends_from_contacts_button_text">Search Contacts</string>
    <string name="find_friends_from_contacts_subtitle">See which of your friends are already on Instagram and choose who to follow.</string>
    <string name="find_friends_from_contacts_explanation">Your contacts are periodically synced and stored on our servers. To remove contacts, go to Settings and disconnect. &lt;b>Learn More.&lt;/b></string>
    <string name="new_photo">New Profile Photo</string>
    <string name="share_photo">Share Profile Photo</string>
    <string name="profile_picture_post_message">&lt;b>Profile Photo Updated!&lt;/b>&lt;br/>Share your new profile photo as a post on Instagram.</string>
    <string name="take_picture">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="import_from_facebook">Import from Facebook</string>
    <string name="import_from_twitter">Import from Twitter</string>
    <string name="remove_photo">Remove Profile Photo</string>
    <string name="remove_current_picture">Remove Current Photo</string>
    <string name="set_a_profile_picture">Set a profile picture</string>
    <string name="could_not_update_profile_picture">"Sorry, we couldn't update your profile picture. Please confirm you have an internet connection and try again in a moment."</string>
    <string name="unable_to_share_profile_photo">Unable to share profile photo.</string>
    <string name="profile_picture_download_failed">Profile picture download failed</string>
    <string name="profile_picture_changed">Your profile picture was changed.</string>
    <string name="nux_main_feed_empty_title">Your friends are sharing photos and videos on Instagram</string>
    <string name="or">or</string>
    <string name="forgot">Forgot?</string>
    <string name="facebook_connect_title">Find Facebook Friends to Follow</string>
    <string name="facebook_connect_subtitle">"You choose who to follow and we'll never post to Facebook without your permission."</string>
    <string name="vk_connect_title">Find VKontakte Friends to Follow</string>
    <string name="vk_connect_subtitle">"You choose who to follow and we'll never post to VKontakte without your permission."</string>
    <string name="connect_to_vk">Connect to VKontakte</string>
    <string name="follow_subtitle">Keep up with their photos and videos.</string>
    <string name="email_not_valid">Please enter a valid email.</string>
    <string name="email_not_available">This email is taken by another account.</string>
    <string name="contact_importer_subtitle">To help people connect on Instagram, your contacts are periodically synced and stored on our servers. You choose which ones to follow. To remove them, go to Settings and disconnect. %1$s</string>
    <string name="learn_more_sentence">Learn more.</string>
    <string name="search_contacts">Search Your Contacts</string>
    <string name="high_confidence_recovery_username">Are you %1$s?</string>
    <string name="explore_event_viewer_view_post">View post</string>
    <string name="explore_event_viewer_tap_resume">Tap to resume</string>
    <string name="tombstone_title">"Why don't you want to see this ad?"</string>
    <string name="tombstone_thanks">Thanks for letting us know.</string>
    <string name="tombstone_feedback">Your feedback improves the quality of ads on Instagram.</string>
</resources>