<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@drawable/tombstone_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/tombstone_reasons" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/font_medium" android:textColor="@color/grey_6" android:gravity="center" android:id="@id/tombstone_title" android:layout_width="fill_parent" android:layout_height="@dimen/tombstone_title_height" android:text="@string/tombstone_title" />
    </LinearLayout>
    <FrameLayout android:layout_gravity="center" android:id="@id/tombstone_thanks" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/font_medium" android:textColor="@color/grey_6" android:gravity="center_horizontal" android:id="@id/tombstone_checkmark_text" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tombstone_thanks" android:drawableTop="@drawable/tombstone_checkmark" android:drawablePadding="16.0dip" />
        <TextView android:textColor="@color/grey_4" android:gravity="center" android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginTop="70.0dip" android:layout_marginRight="60.0dip" android:text="@string/tombstone_feedback" />
    </FrameLayout>
</FrameLayout>