<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/menu_overlay" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/blur_layer" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitXY" />
    <LinearLayout android:gravity="center" android:paddingLeft="50.0dip" android:paddingRight="50.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.instagram.ui.text.FreightSansTextView android:textSize="14.0sp" android:textColor="@color/white" android:ellipsize="end" android:gravity="center" android:id="@id/view_post" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/explore_event_viewer_view_post" android:singleLine="true" android:includeFontPadding="false" android:drawableTop="@drawable/events_view_post" android:drawablePadding="12.0dip" android:layout_weight="1.0" />
        <com.instagram.ui.text.FreightSansTextView android:textSize="14.0sp" android:textColor="@color/white" android:ellipsize="end" android:gravity="center" android:id="@id/share" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/share" android:singleLine="true" android:includeFontPadding="false" android:drawableTop="@drawable/events_share" android:drawablePadding="12.0dip" android:layout_weight="1.0" />
    </LinearLayout>
    <com.instagram.ui.text.FreightSansTextView android:textSize="18.0sp" android:textColor="@color/grey_2" android:ellipsize="end" android:layout_gravity="bottom|center" android:id="@id/tap_resume" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/explore_event_viewer_tap_resume" android:singleLine="true" android:includeFontPadding="false" android:textAllCaps="true" app:medium="true" />
</FrameLayout>