<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.instagram.android.nux.landing.LandingRotatingBackgroundView android:id="@id/one_page_rotating_background" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ScrollView android:id="@id/one_page_scroll_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <FrameLayout android:layout_gravity="center" android:id="@id/profile_pic_layout" android:layout_width="wrap_content" android:layout_height="@dimen/connection_logo_height" android:layout_marginTop="@dimen/add_photo_padding_top_bottom" android:layout_marginBottom="@dimen/add_photo_padding_top_bottom">
                <TextView android:textColor="@color/white" android:layout_gravity="center" android:id="@id/photo_text_view" android:paddingTop="@dimen/add_photo_text_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photo" />
                <com.instagram.common.ui.widget.imageview.CircularImageView android:layout_gravity="center" android:id="@id/add_photo_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/add_photo_plus_sign_margin" android:src="@drawable/add_photo_plus" android:contentDescription="@string/profile_photo_description" />
                <ImageView android:layout_gravity="center" android:id="@id/add_photo_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/add_photo_border" />
            </FrameLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/login_horizontal_margin" android:layout_marginRight="@dimen/login_horizontal_margin">
                <com.instagram.ui.widget.searchedittext.SearchEditText android:textSize="@dimen/font_medium" android:textColor="@color/white" android:textColorHint="@color/white_70_transparent" android:id="@id/full_name" android:background="@drawable/login_input_field" android:paddingLeft="@dimen/row_padding" android:paddingRight="@dimen/row_padding" android:layout_width="fill_parent" android:layout_height="@dimen/row_height_small" android:layout_marginBottom="@dimen/textfield_bottom_margin" android:hint="@string/full_name_optional" android:singleLine="true" android:inputType="textNoSuggestions" android:privateImeOptions="nm" android:imeOptions="actionNext" android:textCursorDrawable="@null" />
                <FrameLayout android:background="@drawable/login_input_field" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/textfield_bottom_margin">
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <com.instagram.ui.widget.searchedittext.SearchEditText android:textSize="@dimen/font_medium" android:textColor="@color/white" android:textColorHint="@color/white_70_transparent" android:id="@id/username" android:background="@null" android:paddingLeft="@dimen/row_padding" android:paddingRight="@dimen/row_padding" android:layout_width="0.0dip" android:layout_height="@dimen/row_height_small" android:hint="@string/username" android:singleLine="true" android:layout_weight="1.0" android:inputType="textNoSuggestions" android:privateImeOptions="nm" android:imeOptions="actionNext" android:textCursorDrawable="@null" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent">
                            <ImageView android:layout_gravity="center_vertical" android:id="@id/username_validation" android:background="@drawable/validation_positive" android:visibility="gone" android:layout_width="@dimen/reg_icon_width" android:layout_height="@dimen/reg_icon_width" android:layout_marginRight="@dimen/reg_validation_padding" android:alpha="0.3" />
                            <View android:layout_gravity="center_vertical" android:id="@id/username_refresh_divider" android:background="@color/white_20_transparent" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="@dimen/reg_icon_width" android:layout_marginRight="@dimen/reg_validation_padding" />
                            <ImageView android:layout_gravity="center_vertical" android:id="@id/username_refresh_button" android:background="@drawable/refresh" android:visibility="gone" android:layout_width="@dimen/reg_icon_width" android:layout_height="@dimen/reg_icon_width" android:layout_marginRight="@dimen/reg_validation_padding" />
                        </LinearLayout>
                    </LinearLayout>
                    <ProgressBar android:layout_gravity="center|right" android:id="@id/progress_username" android:paddingRight="@dimen/error_text_view_padding" android:visibility="gone" android:layout_width="@dimen/reg_icon_width" android:layout_height="@dimen/reg_icon_width" android:indeterminate="true" />
                </FrameLayout>
                <LinearLayout android:orientation="horizontal" android:background="@drawable/login_input_field" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/textfield_bottom_margin">
                    <com.instagram.ui.widget.searchedittext.SearchEditText android:textSize="@dimen/font_medium" android:textColor="@color/white" android:textColorHint="@color/white_70_transparent" android:id="@id/password" android:background="@null" android:paddingLeft="@dimen/row_padding" android:paddingRight="@dimen/row_padding" android:layout_width="0.0dip" android:layout_height="@dimen/row_height_small" android:hint="@string/password" android:singleLine="true" android:layout_weight="1.0" android:inputType="textPassword" android:imeOptions="actionNext" android:textCursorDrawable="@null" />
                    <ImageView android:layout_gravity="center_vertical" android:id="@id/password_validation" android:background="@drawable/validation_positive" android:visibility="gone" android:layout_width="@dimen/reg_icon_width" android:layout_height="@dimen/reg_icon_width" android:layout_marginRight="@dimen/reg_validation_padding" android:alpha="0.3" />
                </LinearLayout>
                <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ProgressBar android:layout_gravity="center" android:id="@id/progress_next" android:visibility="gone" android:layout_width="32.0dip" android:layout_height="32.0dip" android:indeterminate="true" />
                    <TextView android:textSize="@dimen/font_medium" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/next_label" android:background="@drawable/button_border" android:layout_width="fill_parent" android:layout_height="@dimen/row_height_small" android:text="@string/next" />
                </FrameLayout>
            </LinearLayout>
            <View android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/login_horizontal_margin" android:layout_weight="1.0" />
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/notification_bar" />
</FrameLayout>